--- a/Html.html
+++ b/Html.html
@@ -23,7 +23,7 @@
 
 		<div class="home animated fadeIn" >
 			<div class="container">
-				<a class="logo animated hvr-shrink animated fadeIn" href="#" onClick="window.location.reload()">maain</a>
+				<a class="logo animated hvr-shrink animated fadeIn" href="#">main</a>
 				<a href="#" class="open-modal animated fadeIn" data-modal="#modal2">Contact</a>
 				<a href="#" class='open-modal animated fadeIn' data-modal="#modal1">About</a>
 				
