--- a/Html.html
+++ b/Html.html
@@ -56,7 +56,7 @@
         <h1 class='title'>About</h1>
         <p>
                 Egor Logvinov<br><br>
-              17 year
+              17 year's
 
         </p>
         <a class='btn close-modal' data-modal="#modal1" href="#">Закрыть</a>
