--- a/Html.html
+++ b/Html.html
@@ -15,6 +15,7 @@
 		
 		<video  autoplay loop>
 			<source src="logo/video.mp4">
+			<iframe src="logo/video.mp4"></iframe>
 		</video> <canvas id="canv"></canvas>
 
     <div style="display:none" id="timer_2">
